--- a/ColorViewer/ColorViewer.csproj
+++ b/ColorViewer/ColorViewer.csproj
@@ -68,6 +68,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Strings.resx</DependentUpon>
     </Compile>
+    <Compile Include="TodayExtention.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
