binding_all_fields

--- a/ColorViewer/ColorViewer.csproj
+++ b/ColorViewer/ColorViewer.csproj
@@ -63,12 +63,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Helpers\AppCommand.cs" />
+    <Compile Include="Models\AppViewModel.cs" />
+    <Compile Include="Models\ColorViewModel.cs" />
     <Compile Include="Strings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Strings.resx</DependentUpon>
     </Compile>
     <Compile Include="TodayExtention.cs" />
+    <Page Include="CustomStyles\ColorViewerStyles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
